--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 spring.application.name=order-management-fulfillment  
 spring.datasource.url=jdbc:h2:mem:orderdb
 spring.datasource.driverClassName=org.h2.Driver
